--- a/sonarqube-scanner/sonar-project.properties
+++ b/sonarqube-scanner/sonar-project.properties
@@ -1,5 +1,6 @@
-sonar.projectKey=org.sonarqube:sonarqube-scanner
-sonar.projectName=Example of SonarQube Scanner Usage
+sonar.projectKey=Yuemax_sonar-scanning-examples
+sonar.organization=yuemax
+sonar.projectName=sonar-scanning-examples
 sonar.projectVersion=1.0
 
 sonar.sources=src,copybooks
