--- a/sonarqube-scanner/sonar-project.properties
+++ b/sonarqube-scanner/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=Yuemax_sonar-scanning-examples
 sonar.organization=yuemax
 sonar.projectName=sonar-scanning-examples
+sonar.host.url=https://sonarcloud.io/organizations/yuemax
 sonar.projectVersion=1.0
 
 sonar.sources=src,copybooks
